--- a/src/probabilistic_physics_inform_v3.ipynb
+++ b/src/probabilistic_physics_inform_v3.ipynb
@@ -3915,6 +3915,47 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## Export result"
+      ],
+      "metadata": {
+        "id": "f079kft6NVW8"
+      },
+      "id": "f079kft6NVW8"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "shutil.make_archive(output_dir, 'zip', 'saved_output')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "-4MVjvF1NVyf",
+        "outputId": "d8a321d6-e6f2-4e95-8c71-e24052036fff"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/content/saved_output.zip'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 242
+        }
+      ],
+      "id": "-4MVjvF1NVyf"
+    },
+    {
+      "cell_type": "markdown",
       "id": "4794bcf9-359d-483b-8f36-e2bd7a352999",
       "metadata": {
         "id": "4794bcf9-359d-483b-8f36-e2bd7a352999"
