add link to Github and Overleaf

--- a/src/probabilistic_physics_inform_v3.ipynb
+++ b/src/probabilistic_physics_inform_v3.ipynb
@@ -3,6 +3,19 @@
     {
       "cell_type": "markdown",
       "source": [
+        "https://github.com/phanav/probabilistic-physics-satie\n",
+        "\n",
+        "https://www.overleaf.com/read/xzvhzjxzqykr\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "8vZqzhT9Ts1c"
+      },
+      "id": "8vZqzhT9Ts1c"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Setup"
       ],
       "metadata": {
@@ -23,12 +36,12 @@
         "id": "OkZPsbt_oIyo"
       },
       "id": "OkZPsbt_oIyo",
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": null,
       "id": "c85ffd23-4c56-4f24-ad7b-781284e380ed",
       "metadata": {
         "id": "c85ffd23-4c56-4f24-ad7b-781284e380ed"
@@ -69,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": null,
       "id": "ba99b0ad-2345-4381-9386-2288fe4afdbc",
       "metadata": {
         "id": "ba99b0ad-2345-4381-9386-2288fe4afdbc"
@@ -81,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 127,
+      "execution_count": null,
       "id": "46ecb8ef-dbe5-48e7-b95b-f35ff6ecad19",
       "metadata": {
         "id": "46ecb8ef-dbe5-48e7-b95b-f35ff6ecad19"
@@ -107,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 128,
+      "execution_count": null,
       "id": "fbf84e02-3d32-4319-85ac-e791d2523656",
       "metadata": {
         "id": "fbf84e02-3d32-4319-85ac-e791d2523656"
@@ -130,7 +143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 129,
+      "execution_count": null,
       "id": "cb1f088d-48d0-4a59-b5f2-2afe012ead93",
       "metadata": {
         "id": "cb1f088d-48d0-4a59-b5f2-2afe012ead93"
@@ -184,7 +197,7 @@
         "id": "WCg8fC6XCmRe"
       },
       "id": "WCg8fC6XCmRe",
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -232,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 131,
+      "execution_count": null,
       "id": "74f542d5-e060-4de9-bbdb-8abeb0e75d9a",
       "metadata": {
         "id": "74f542d5-e060-4de9-bbdb-8abeb0e75d9a"
@@ -246,7 +259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 132,
+      "execution_count": null,
       "id": "851d4c63-93ea-4081-90c1-061f0fca614d",
       "metadata": {
         "id": "851d4c63-93ea-4081-90c1-061f0fca614d"
@@ -262,7 +275,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 133,
+      "execution_count": null,
       "id": "7ecece3d-5d3b-4eaa-a6ca-bb0d7a23b043",
       "metadata": {
         "colab": {
@@ -319,7 +332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": null,
       "id": "3cbc8562-521b-481e-af67-b3f6dc817058",
       "metadata": {
         "id": "3cbc8562-521b-481e-af67-b3f6dc817058"
@@ -377,7 +390,7 @@
         "outputId": "6b9edf67-7387-4a8a-de4f-a65f8de15b65"
       },
       "id": "auTMKm20rRGr",
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -419,7 +432,7 @@
         "outputId": "5fb741c4-54e3-4d55-c84a-8874884aa114"
       },
       "id": "S9BPUZY8rZXv",
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -449,7 +462,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 137,
+      "execution_count": null,
       "id": "JP_Ei50PsCrW",
       "metadata": {
         "id": "JP_Ei50PsCrW"
@@ -499,7 +512,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 138,
+      "execution_count": null,
       "id": "b3bfb017-1f42-4912-82c3-658d8bc00aac",
       "metadata": {
         "id": "b3bfb017-1f42-4912-82c3-658d8bc00aac"
@@ -523,7 +536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": null,
       "id": "7a144fc1-34fd-458b-9d7d-b22fcbd4a51a",
       "metadata": {
         "id": "7a144fc1-34fd-458b-9d7d-b22fcbd4a51a"
@@ -542,7 +555,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 140,
+      "execution_count": null,
       "id": "87ae35e8-54bd-4886-9654-3c55962de94e",
       "metadata": {
         "id": "87ae35e8-54bd-4886-9654-3c55962de94e"
@@ -624,7 +637,7 @@
         "outputId": "75fde34f-be69-4df9-f125-d910508ef003"
       },
       "id": "jjx4xgdGIiaL",
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -658,12 +671,12 @@
         "id": "aXQ2SWWSIrrd"
       },
       "id": "aXQ2SWWSIrrd",
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 143,
+      "execution_count": null,
       "id": "d92f7ce3-ab08-49d2-9459-193d26c19922",
       "metadata": {
         "id": "d92f7ce3-ab08-49d2-9459-193d26c19922"
@@ -699,7 +712,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 144,
+      "execution_count": null,
       "id": "5893a6f9-9b82-401a-818e-191351beeaea",
       "metadata": {
         "colab": {
@@ -748,7 +761,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": null,
       "id": "d03e29fe-b744-46cd-a554-5fe3204fc97c",
       "metadata": {
         "id": "d03e29fe-b744-46cd-a554-5fe3204fc97c"
@@ -782,7 +795,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 146,
+      "execution_count": null,
       "id": "c75ff02a-06cb-4b06-8cb9-fe45e2b3b214",
       "metadata": {
         "id": "c75ff02a-06cb-4b06-8cb9-fe45e2b3b214"
@@ -797,7 +810,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": null,
       "id": "547646b6-1a4b-45fb-b33f-c04be6fd3038",
       "metadata": {
         "id": "547646b6-1a4b-45fb-b33f-c04be6fd3038"
@@ -826,7 +839,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 148,
+      "execution_count": null,
       "id": "464a29fe-17b2-496d-b8c3-0f8a3ab57f20",
       "metadata": {
         "id": "464a29fe-17b2-496d-b8c3-0f8a3ab57f20"
@@ -872,7 +885,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 149,
+      "execution_count": null,
       "id": "b71e911f-8961-4aa5-82bc-df9eccd6b309",
       "metadata": {
         "id": "b71e911f-8961-4aa5-82bc-df9eccd6b309"
@@ -933,7 +946,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 150,
+      "execution_count": null,
       "id": "3181ea07-2972-4f2d-a0ec-61a44588af8b",
       "metadata": {
         "id": "3181ea07-2972-4f2d-a0ec-61a44588af8b"
@@ -996,7 +1009,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 151,
+      "execution_count": null,
       "id": "da38538f-8b6b-4d48-a715-3853d64492aa",
       "metadata": {
         "id": "da38538f-8b6b-4d48-a715-3853d64492aa"
@@ -1032,7 +1045,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 158,
+      "execution_count": null,
       "id": "f66ab80f-0e4d-4920-9094-887a0c7412ee",
       "metadata": {
         "id": "f66ab80f-0e4d-4920-9094-887a0c7412ee",
@@ -1138,7 +1151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 153,
+      "execution_count": null,
       "id": "3581a6af-ceaf-45a7-b228-13314637ed68",
       "metadata": {
         "id": "3581a6af-ceaf-45a7-b228-13314637ed68",
@@ -1241,7 +1254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 157,
+      "execution_count": null,
       "id": "057be040-c1f7-46ff-a533-98f182d5b0c3",
       "metadata": {
         "id": "057be040-c1f7-46ff-a533-98f182d5b0c3",
@@ -1392,7 +1405,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "id": "7d41b9da-6ca8-41cf-93bf-914a3419f3a4",
       "metadata": {
         "id": "7d41b9da-6ca8-41cf-93bf-914a3419f3a4"
@@ -1417,7 +1430,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": null,
       "id": "e4ed4aef-2beb-4839-bb2c-9bcb7fb919b8",
       "metadata": {
         "id": "e4ed4aef-2beb-4839-bb2c-9bcb7fb919b8"
@@ -1456,7 +1469,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 159,
+      "execution_count": null,
       "id": "718b9b9f-d69c-4c50-80e9-99870e28cee5",
       "metadata": {
         "id": "718b9b9f-d69c-4c50-80e9-99870e28cee5",
@@ -1594,7 +1607,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": null,
       "id": "1f7862aa-9b63-4c6c-a22d-147c55f15943",
       "metadata": {
         "id": "1f7862aa-9b63-4c6c-a22d-147c55f15943"
@@ -1641,7 +1654,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": null,
       "id": "45b68a36-d460-4c17-bf94-ab531e76e1a9",
       "metadata": {
         "id": "45b68a36-d460-4c17-bf94-ab531e76e1a9"
@@ -1682,7 +1695,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": null,
       "metadata": {
         "id": "IroWha0eP3rv"
       },
@@ -1742,7 +1755,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": null,
       "metadata": {
         "outputId": "b26f057e-0bc1-4abb-ba10-4cef57f8d06b",
         "id": "OAnzbjH1P3r8",
@@ -1832,7 +1845,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": null,
       "metadata": {
         "id": "1c14e80a-7e12-4797-b146-ce34c5e9825b"
       },
@@ -1893,7 +1906,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": null,
       "metadata": {
         "id": "da2b7c8c-46a4-4e6a-a31a-3f6e23993c2c"
       },
@@ -1929,7 +1942,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": null,
       "metadata": {
         "id": "2807ac72-0f15-4f74-bac7-362e731981ee"
       },
@@ -2012,12 +2025,12 @@
         "id": "f5uaSl2RlspS"
       },
       "id": "f5uaSl2RlspS",
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": null,
       "metadata": {
         "id": "14615c48-d464-46e3-bce4-5a892bd2cbea"
       },
@@ -2063,7 +2076,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": null,
       "metadata": {
         "id": "4304ec52-cc90-4381-9b94-aecc0c33c684"
       },
@@ -2136,7 +2149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": null,
       "metadata": {
         "id": "6978887c-b260-4d53-8c23-f0ac07630e63",
         "colab": {
@@ -2166,7 +2179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": null,
       "metadata": {
         "id": "290f46d6-4b61-465d-907e-a21d51f2a86b"
       },
@@ -2237,7 +2250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": null,
       "metadata": {
         "id": "4fe4d097-7bde-42a9-82ef-f7f531ff6e74",
         "outputId": "ffc41766-453d-4703-af50-13b785140a5f",
@@ -2383,7 +2396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": null,
       "metadata": {
         "id": "d1ae5cb8-17f9-4de6-8550-ade18612098d"
       },
@@ -2440,7 +2453,7 @@
         "id": "Hykv1le2y_v8"
       },
       "id": "Hykv1le2y_v8",
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2480,7 +2493,7 @@
         "outputId": "1b9d0c7d-36fe-42c8-f224-5bac49130299"
       },
       "id": "CEkxTWpmzJEa",
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2602,7 +2615,7 @@
         "id": "-4YpRmj9zUJq"
       },
       "id": "-4YpRmj9zUJq",
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2619,7 +2632,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": null,
       "id": "9e0e16f0-9c9b-446d-bc28-dff69d8f94f7",
       "metadata": {
         "id": "9e0e16f0-9c9b-446d-bc28-dff69d8f94f7"
@@ -2714,7 +2727,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": null,
       "id": "8d916990-9b73-4475-b24f-a33e24e83e94",
       "metadata": {
         "id": "8d916990-9b73-4475-b24f-a33e24e83e94",
@@ -2745,7 +2758,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": null,
       "id": "a77865bf-8746-4224-ba56-4eaea2c72783",
       "metadata": {
         "id": "a77865bf-8746-4224-ba56-4eaea2c72783"
@@ -2776,7 +2789,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": null,
       "id": "ef2c579d-fcfc-4535-951b-a6fa38e6efb9",
       "metadata": {
         "id": "ef2c579d-fcfc-4535-951b-a6fa38e6efb9"
@@ -2858,7 +2871,7 @@
         "outputId": "e72e5bc4-b4ab-40e4-bf5b-485553b4e942"
       },
       "id": "cKePJTvtvV7s",
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2971,7 +2984,7 @@
         "outputId": "1b4e9d9d-6eaa-40c0-97c8-0bca0064cb27"
       },
       "id": "sDReqt3PR4Z8",
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3122,7 +3135,7 @@
         "outputId": "228ef2d6-a795-4a08-c125-5515853a1f35"
       },
       "id": "AxN8bBWfxOfF",
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3242,7 +3255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": null,
       "id": "342b21d0-fab7-4cef-b295-0d4f35c8c684",
       "metadata": {
         "id": "342b21d0-fab7-4cef-b295-0d4f35c8c684"
@@ -3305,7 +3318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": null,
       "id": "ec2408a0-2db0-42aa-842e-9bfd7fbb42b1",
       "metadata": {
         "id": "ec2408a0-2db0-42aa-842e-9bfd7fbb42b1",
@@ -3337,7 +3350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": null,
       "id": "5d505046-3f3a-4b55-ae4c-b3b95b4a1091",
       "metadata": {
         "id": "5d505046-3f3a-4b55-ae4c-b3b95b4a1091"
@@ -3365,7 +3378,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": null,
       "id": "5131d089-2cab-41d9-8cf5-e01c6f8866d9",
       "metadata": {
         "id": "5131d089-2cab-41d9-8cf5-e01c6f8866d9",
@@ -3482,7 +3495,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": null,
       "id": "a7228660-b6c3-4802-93b7-3340dd962a1a",
       "metadata": {
         "id": "a7228660-b6c3-4802-93b7-3340dd962a1a",
@@ -3678,7 +3691,7 @@
         "outputId": "d0901741-d21b-4e63-994c-b16f2ed7f9ea"
       },
       "id": "dBBt636tx75H",
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3817,7 +3830,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": null,
       "id": "f5602bd1-98fe-4f3b-b54c-7ecf2b4adbb1",
       "metadata": {
         "id": "f5602bd1-98fe-4f3b-b54c-7ecf2b4adbb1"
@@ -3850,7 +3863,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": null,
       "id": "70d27262-3e15-4e74-a615-074cca08a0f6",
       "metadata": {
         "id": "70d27262-3e15-4e74-a615-074cca08a0f6"
@@ -3889,7 +3902,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": null,
       "id": "af9f43da-4167-4c43-b48c-c824ed4d4696",
       "metadata": {
         "id": "af9f43da-4167-4c43-b48c-c824ed4d4696"
@@ -4037,12 +4050,12 @@
         "id": "Yy4QczJdKr1g"
       },
       "id": "Yy4QczJdKr1g",
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": null,
       "id": "ddb31121-a13d-442d-abc3-575105a5a90c",
       "metadata": {
         "id": "ddb31121-a13d-442d-abc3-575105a5a90c",
@@ -4085,7 +4098,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 120,
+      "execution_count": null,
       "id": "56dd7635-bbdb-4532-9af1-4dd1699b6eed",
       "metadata": {
         "id": "56dd7635-bbdb-4532-9af1-4dd1699b6eed"
@@ -4208,12 +4221,12 @@
         "id": "qnr91QDk9Qwm"
       },
       "id": "qnr91QDk9Qwm",
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": null,
       "id": "73d8cdc4-22d2-47d5-905d-80bc31ae1f1e",
       "metadata": {
         "id": "73d8cdc4-22d2-47d5-905d-80bc31ae1f1e",
@@ -4351,7 +4364,7 @@
         "outputId": "5a13d6d5-a75c-4931-cab9-f077662e1a1e"
       },
       "id": "uTEEncZdLYwJ",
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11674,7 +11687,8 @@
     "colab": {
       "collapsed_sections": [],
       "name": "probabilistic_physics_inform_v3.ipynb",
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
