change result file path for radar plot

--- a/src/probabilistic_physics_inform_v3.ipynb
+++ b/src/probabilistic_physics_inform_v3.ipynb
@@ -4580,8 +4580,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# result_df = pd.read_csv(os.path.join(result_dir, metric_file_path), index_col=0).reset_index().infer_objects()\n",
-        "result_df = pd.read_csv(os.path.join(metric_file_path), index_col=0).reset_index().infer_objects()\n",
+        "result_df = pd.read_csv(os.path.join(result_dir, metric_file_path), index_col=0).reset_index().infer_objects()\n",
+        "# result_df = pd.read_csv(os.path.join(metric_file_path), index_col=0).reset_index().infer_objects()\n",
         "\n",
         "# result_df.drop([5,6,7,8,9], inplace=True)\n",
         "\n",
